<resources>
    <string name="app_name">Remed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">ReMed - Log In</string>

    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>

    <string name="login_pass">Password</string>
    <string name="login_email">Email</string>
    <string name="title_activity_sign_up">SignUp</string>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="missing_firstName">Please enter your first name.</string>
    <string name="missing_lastName">Please enter your last name.</string>
    <string name="missing_email">Please enter your email address.</string>
    <string name="missing_phoneNumber">Please enter your phone number.</string>
    <string name="missing_LoginPassword">Please a password.</string>
    <string name="missing_ConfirmPassword">Please confirm your password.</string>

    <string name="matching_pass_error">Passwords do not match.</string>
    <string name="email_taken">This email is already taken.</string>

    <string name="title_activity_home_page">Home Page</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="doctors">Doctors</string>
    <string name="family">Family</string>
    <string name="you">You</string>
    <string name="title_activity_new_med">Create New Reminder</string>

    <string name="frequency">Frequency</string>

    <string name="hour">Hour</string>
    <string name="min">Minute</string>
    <string name="med_name">Medication Name</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>

    <string name="create">Create</string>

    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
</resources>
